Fast buy completed

--- a/FinalClient/src/main/java/GUI/ClientGUI.form
+++ b/FinalClient/src/main/java/GUI/ClientGUI.form
@@ -39,7 +39,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="getCreditjButton" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="254" max="-2" attributes="0"/>
+                      <Component id="instantBuyjButton" min="-2" pref="254" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -62,7 +62,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="instantBuyjButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="getCreditjButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -275,12 +275,12 @@
     </Component>
     <Component class="javax.swing.JTextField" name="rechargeTextField">
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="instantBuyjButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Instant Buy"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="instantBuyjButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="getCreditjButton">
