--- a/FinalClient/src/main/java/GUI/ClientGUI.form
+++ b/FinalClient/src/main/java/GUI/ClientGUI.form
@@ -262,7 +262,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Amount to charge (at least 10000 satoshis) "/>
+        <Property name="text" type="java.lang.String" value="Amount to charge (at least 1000 satoshis): "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="rechargejButton">
